public vote va vote metodlari birlashtirildi va databasega yozishda transaction qo'shildi
